styled the scrollbar and fixed text in dashboard

--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -155,6 +155,6 @@
   overflow-y: scroll;
   overflow-x: hidden;
   padding: 16px;
-  height: 350px;
+  height: 600px;
 
 }
